--- a/client/build-client_interface-Desktop-Debug/client_interface.cbp
+++ b/client/build-client_interface-Desktop-Debug/client_interface.cbp
@@ -196,9 +196,6 @@
 		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/BackGroundTile.h">
 			<Option target="client_interface"/>
 		</Unit>
-		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/BlockingQueue.cpp">
-			<Option target="client_interface"/>
-		</Unit>
 		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/BlockingQueue.h">
 			<Option target="client_interface"/>
 		</Unit>
@@ -236,6 +233,18 @@
 			<Option target="client_interface"/>
 		</Unit>
 		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/MapView.h">
+			<Option target="client_interface"/>
+		</Unit>
+		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/MenuImage.cpp">
+			<Option target="client_interface"/>
+		</Unit>
+		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/MenuImage.h">
+			<Option target="client_interface"/>
+		</Unit>
+		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/MenuText.cpp">
+			<Option target="client_interface"/>
+		</Unit>
+		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/MenuText.h">
 			<Option target="client_interface"/>
 		</Unit>
 		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/Renderizable.cpp">
@@ -464,6 +473,15 @@
 			<Option target="client_interface"/>
 		</Unit>
 		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/client_interface/mainwindow.ui">
+			<Option target="client_interface"/>
+		</Unit>
+		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/client_interface/waitingWindow.cpp">
+			<Option target="client_interface"/>
+		</Unit>
+		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/client_interface/waitingWindow.h">
+			<Option target="client_interface"/>
+		</Unit>
+		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/client_interface/waitingWindow.ui">
 			<Option target="client_interface"/>
 		</Unit>
 		<Unit filename="/home/pilar/Escritorio/tp3_taller/Dune_TP3/client/client_protocol.cpp">
